--- a/mosya.html
+++ b/mosya.html
@@ -1,1 +1,79 @@
 # bicycle_sample
+<html lang="ja" style="">
+    <head>
+    <meta charset="utf-8">
+    <title>Profile</title>
+    <meta name="description" content="テキストテキストテキストテキストテキストテキストテキストテキスト">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+    <link rel="stylesheet" href="stylesheet.css">
+  </head>
+
+  <body>
+<headr id="header" class="wrapper">
+   <h1 class="site-title">
+       <a href="#">
+       <img src="logo.svg" alt="Profile">
+       </a>
+   </h1>
+
+   <nav>
+       <ul>
+           <li><a href="#about">About</a></li>
+           <li><a href="#bicycle">Bicycle</a></li>
+       </ul>
+   </nav>
+
+</headr>
+
+<main>
+  <div class="mainvisual">
+      <img src="mainvisual.jpg" alt="テキストテキストテキスト">
+  </div>
+
+  <section id="about" class="wrapper">
+    <h2 class="section-title">About</h2>
+
+    <div class="container">
+       <img src="about.jpg" alt="テキストテキストテキスト">
+
+    <div class="text">
+       <h3 class="container-title">KAKERU MIYAUCHI</h3>
+       <p>テキストテキストテキストテキストテキストテキストテキスト
+       <br>テキストテキストテキストテキストテキストテキストテキスト
+       <br>テキストテキストテキストテキストテキストテキストテキスト
+　　　　</p>
+    </div>   
+
+    </div>
+  </section>
+
+  <section id="bicycle" class="wrapper">
+      <h2 class="section-title">Bicycle</h2>
+      <ul>
+          <li>
+              <img src="bicycle1.jpg" alt="テキストテキストテキスト">
+              <h3 class="container-title">テキストテキストテキスト</h3>
+              <p>テキストテキストテキスト</p>
+          </li>
+          <li>
+            <img src="bicycle2.jpg" alt="テキストテキストテキスト">
+            <h3 class="container-title">テキストテキストテキスト</h3>
+            <p>テキストテキストテキスト</p>
+        </li>
+        <li>
+            <img src="bicycle3.jpg" alt="テキストテキストテキスト">
+            <h3 class="container-title">テキストテキストテキスト</h3>
+            <p>テキストテキストテキスト</p>
+        </li>
+      </ul>
+  </section>
+  <footer id="footer">
+     <p>©︎2021 Profile</p>
+  </footer>
+</main>
+
+  </body>
+
+</html>
